# python-project-50

./: .gitignore  Makefile  README.md  README2.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  engine.py
gendiff/scripts/: gendiff.py
